--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -2987,6 +2987,13 @@ section {
   background: #3B5998;
 }
 
+.instagram-bg {
+  background: #813286;
+}
+.youtube-bg {
+  background: #DD4B39;
+}
+
 .twitter-bg {
   background: #55ACEE;
 }
